--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--<head lang="ja">-->
+  <!--<meta charset="UTF-8">-->
+  <!--<link href="style.css">-->
+<!--</head>-->
+<!--<body>-->
+<!--<ul class="wrap" id="article-list">-->
+<!--<div class="wrap" id="container"></div>-->
+<!--<script src="bundle.js"></script>-->
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
 <html>
-<head lang="ja">
-  <meta charset="UTF-8">
-  <link href="style.css">
-</head>
-<body>
-<ul class="wrap" id="article-list">
-<script src="bundle.js"></script>
-</body>
+  <head lang="ja">
+    <meta charset="UTF-8">
+    <link href="style.css">
+  </head>
+  <body>
+
+    <div id="body"></div>
+    <button type="button" id="overlay"></button>
+
+    <!--<script src="/js/jquery-2.2.0.min.js"></script>-->
+    <!--<script src="/js/common.js"></script>-->
+    <script src="bundle.js"></script>
+
+  </body>
 </html>
+
 
 
